fix(menu): increase z-index

--- a/src/components/Menu/styles.module.scss
+++ b/src/components/Menu/styles.module.scss
@@ -21,7 +21,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 1000;
   left: 0;
   top: 0;
   background: linear-gradient($theme-palette-secondary, $theme-palette-primary);
